--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,12 @@ blockquote{
 	margin-left: auto;
 	margin-right: auto;
 }
+.pull-left{
+	float: left;
+}
+.pull-right{
+	float: right;
+}
 /*----Default classes end----*/
 
 /*----Default component----*/
@@ -186,12 +192,21 @@ blockquote span,
 	background-color: transparent;
 	border:1px solid black;
 }
+.arrow-up{
+	font-size: 50px;
+	color: #c6c6c6;
+	position: fixed;
+	right: 30px;
+	bottom: 30px;
+	cursor: pointer;
+
+}
 /*----Default component end----*/
 .form-control{
 	width: 100%;
 	border: 1px solid #e5e5e5;
 	border-radius: 2px;
-	height: 36px;
+	height: 40px;
 	font-size: 12px;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
@@ -204,8 +219,8 @@ blockquote span,
 .form-control:focus{
 	border-color: #111;
 }
-textarea.from-control{
-	min-height: 82px;	
+textarea.form-control{
+	min-height: 90px;	
 	padding-top: 10px;
 }
 .form-control[disabled],
@@ -226,7 +241,7 @@ textarea.from-control{
 }
 .header{
 	padding: 25px 0;
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	top: 0;
 	z-index: 99;
@@ -300,6 +315,16 @@ textarea.from-control{
 	color: rgba(255, 255 ,255, 0.68);
 	font: 300 19px/1 'Open Sans', sans-serif;
 }
+.white{
+	background-color: white;
+	margin-top: 370px;
+}
+.inner .rhomb-icon .fa{
+	position:relative;
+	top: 4px;
+	left: 3px;
+	font-size: 20px;
+}
 /*-----inner end----*/
 
 /*---About studio---*/
@@ -321,9 +346,38 @@ textarea.from-control{
 	height: 100%;
 	background-color: #000;
 	transition: all .2s linear;
+	padding: 40px;
 }
 .team-item .team-item-img:hover .team-item-skills{
 	opacity: 1;
+}
+.skill-item span{
+	font-size: 11px;
+	color: #fff;
+	display: block;
+}
+.progress-wrapp{
+	width: 100%;
+	height: 12px;
+	background-color: rgba(255, 255, 255, .15);
+}
+.progress-wrapp .progress{
+	background-color: rgba(255, 255, 255, .75);
+	height: 12px;
+	width: 0%;
+	transition: width .5s ease-out;
+}
+.team-item .team-item-img:hover .branding {
+	width: 70%;
+}
+.team-item .team-item-img:hover .design {
+	width: 80%;
+}
+.team-item .team-item-img:hover .development{
+	width: 76%;
+}
+.team-item .team-item-img:hover .photography{
+	width: 72%;
 }
 .team-item-info span{
 	display: block;
@@ -337,6 +391,32 @@ textarea.from-control{
 .team-item-role{
 	font-size: 12px;
 	margin-top: 15px;
+}
+.team-item-skills .skills{
+	font-size: 18px;
+	line-height: 2.11;
+	letter-spacing: .3em;
+	margin-bottom: 13px;
+	display: block;
+}
+.team-item-skills p{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 13px;
+	line-height: 21px;
+	color: #fff;
+	opacity: .5;
+	text-transform: none;
+	margin-bottom: 23px;
+}
+.team-item-skills .skill-item + .skill-item{
+	margin-top: 10px;
+}
+.scill-name{
+	font-weight: 400;
+	line-height: 25px;
+	letter-spacing: .2em;
+	text-transform: uppercase;
+	font-size: 11px;
 }
 /*---About studio end---*/
 
@@ -487,7 +567,7 @@ textarea.from-control{
 .tabs-nav .icon{
 	color: #888;
 }
-.tabs-nav  .ui-state-active span{
+.tabs-nav  .ui-stahte-active span{
 	color: #111;
 }
 .services .tabs-nav{
@@ -564,14 +644,14 @@ textarea.from-control{
 } 
 
 .slide-content p{
-margin-top: 42px;
-margin-bottom: 23px;
-font-size: 18px;
-line-height: 30px;
-color: #fff;
-max-width: 750px;
-margin-right: auto;
-margin-left: auto;
+	margin-top: 42px;
+	margin-bottom: 23px;
+	font-size: 18px;
+	line-height: 30px;
+	color: #fff;
+	max-width: 750px;
+	margin-right: auto;
+	margin-left: auto;
 }
 .review-author{
 	font-weight: 400;
@@ -605,6 +685,9 @@ margin-left: auto;
 /*---Subsride end----*/
 
 /*---contacts start---*/
+.contact-items-wrapper{
+	margin-bottom: 80px;
+}
 .contact-item .contact-item-content{
 	display: inline-block;
 	vertical-align: middle;
@@ -624,12 +707,73 @@ margin-left: auto;
 	line-height: 24px;
 	color: #111;
 }
-/*---contacts start end---*/
+.contact-form .form-col{
+	float: left;
+	width: 50%;
+	padding: 0 5px;
+}
+.contact-form {
+	margin: 0 -5px;
+	overflow: hidden;
 
+}
+.contact-form .form-control + .form-control {
+	margin-top: 10px;
+}
+.contacts .form-info,
+.contacts button{
+	margin-top: 20px;
+}
+.form-info span{
+	line-height: 40px;
+}
+.form-info .fa{
+	margin-right: 5px;
+
+}
+/*---contacts  end---*/
+#map{
+	height: 410px;
+}
+.map-container{
+	position: relative;
+}
+.on-map-block{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, .8);
+}
+.map-container:hover .on-map-block{
+	display: none;
+}
+.rhomb-map{
+	background-color: #fff;
+}
+.map-icon{
+	padding: 163px 0;
+
+}
+.open span{
+	font-size: 16px;
+	opacity: .75;
+	letter-spacing: .3em;
+}
+
+.map-icon .open{
+	margin-top: 25px;
+
+}
+.map-icon .rhomb-icon>.fa{
+	color: black;
+
+}
 /*---footer---*/
 .up{
 	margin-top: 60px;
-	
+
 }
 .logo-up{
 	margin-bottom: 25px;
