--- a/css/grid.css
+++ b/css/grid.css
@@ -18,38 +18,163 @@
 	float: left;
 }
 .col-1{
-width: 8.33333333%;
+	width: 8.33333333%;
 }
 .col-2{
-width: 16.6666667%;
+	width: 16.6666667%;
 }
 .col-3{
-width: 25%;
+	width: 25%;
 }
 .col-4{
-width: 33.33333333%;
+	width: 33.33333333%;
 }
 .col-5{
-width: 41.66666667%;
+	width: 41.66666667%;
 }
 .col-6{
-width: 50%;
+	width: 50%;
 }
 .col-7{
-width: 58.33333333%;
+	width: 58.33333333%;
 }
 .col-8{
-width: 66.66666667%;
+	width: 66.66666667%;
 }
 .col-9{
-width: 75%;
+	width: 75%;
 }
 .col-10{
-width: 83.33333333%;
+	width: 83.33333333%;
 }
 .col-11{
-width: 91.66666667%;
+	width: 91.66666667%;
 }
 .col-12{
-width: 100%;
+	width: 100%;
 }
+/*---large---*/
+@media (max-width: 1200px) {
+	.col-lg-1{
+		width: 8.33333333%;
+	}
+	.col-lg-2{
+		width: 16.6666667%;
+	}
+	.col-lg-3{
+		width: 25%;
+	}
+	.col-lg-4{
+		width: 33.33333333%;
+	}
+	.col-lg-5{
+		width: 41.66666667%;
+	}
+	.col-lg-6{
+		width: 50%;
+	}
+	.col-lg-7{
+		width: 58.33333333%;
+	}
+	.col-lg-8{
+		width: 66.66666667%;
+	}
+	.col-lg-9{
+		width: 75%;
+	}
+	.col-lg-10{
+		width: 83.33333333%;
+	}
+	.col-lg-11{
+		width: 91.66666667%;
+	}
+	.col-lg-12{
+		width: 100%;
+	}
+	.d-lg-none{
+		display: none;
+	}
+	/*---medium---*/
+	@media (max-width: 991px) {
+		.col-md-1{
+			width: 8.33333333%;
+		}
+		.col-md-2{
+			width: 16.6666667%;
+		}
+		.col-md-3{
+			width: 25%;
+		}
+		.col-md-4{
+			width: 33.33333333%;
+		}
+		.col-md-5{
+			width: 41.66666667%;
+		}
+		.col-md-6{
+			width: 50%;
+		}
+		.col-md-7{
+			width: 58.33333333%;
+		}
+		.col-md-8{
+			width: 66.66666667%;
+		}
+		.col-md-9{
+			width: 75%;
+		}
+		.col-md-10{
+			width: 83.33333333%;
+		}
+		.col-md-11{
+			width: 91.66666667%;
+		}
+		.col-md-12{
+			width: 100%;
+		}
+		.d-md-none{
+			display: none;
+		}
+	}
+	/*---XS---*/
+	@media (max-width: 576px) {
+		.col-xs-1{
+			width: 8.33333333%;
+		}
+		.col-xs-2{
+			width: 16.6666667%;
+		}
+		.col-xs-3{
+			width: 25%;
+		}
+		.col-xs-4{
+			width: 33.33333333%;
+		}
+		.col-xs-5{
+			width: 41.66666667%;
+		}
+		.col-xs-6{
+			width: 50%;
+		}
+		.col-xs-7{
+			width: 58.33333333%;
+		}
+		.col-xs-8{
+			width: 66.66666667%;
+		}
+		.col-xs-9{
+			width: 75%;
+		}
+		.col-xs-10{
+			width: 83.33333333%;
+		}
+		.col-xs-11{
+			width: 91.66666667%;
+		}
+		.col-xs-12{
+			width: 100%;
+		}
+		.d-xs-none{
+			display: none;
+		}
+	}
