--- a/css/style.css
+++ b/css/style.css
@@ -85,17 +85,25 @@ blockquote{
 /*----Default component----*/
 .default-section{
 	padding: 135px 0;
-
+}
+@media (max-width: 767px) {
+	.default-section{
+		padding: 65px 0;
+	}
 }
 .small-section{
 	padding: 70px 0;
+}
+@media (max-width: 767px) {
+	.small-section{
+		padding: 35px 0;
+	}
 }
 .container{
 	max-width: 1200px;
 	padding: 0 15px;
 	margin: auto;
 }
-
 .container-fluid{
 	padding: 0 15px;
 }
@@ -134,6 +142,11 @@ blockquote span,
 	font-size: 11px;
 	text-transform: uppercase;
 	letter-spacing: .2em;
+}
+@media (max-width: 991px){
+	blockquote{
+		margin-bottom: 30px;
+	}
 }
 .btn{
 	display: inline-block;
@@ -199,9 +212,7 @@ blockquote span,
 	right: 30px;
 	bottom: 30px;
 	cursor: pointer;
-
 }
-/*----Default component end----*/
 .form-control{
 	width: 100%;
 	border: 1px solid #e5e5e5;
@@ -239,6 +250,9 @@ textarea.form-control{
 .form-info .fa{
 	font-size: 12px;
 }
+/*----Default component end----*/
+
+/*-----header start-------*/
 .header{
 	padding: 25px 0;
 	position: absolute;
@@ -267,13 +281,24 @@ textarea.form-control{
 .header .header-nav li + li{
 	margin-left: 35px;
 }
+.slicknav_menu{
+	display: none;
+}
+@media (max-width: 767px) { 
+	.slicknav_menu{
+		display: block;
+	}
+	.header-nav{
+		display: none;
+	}
+	
+}
+/*-----header end-------*/
 
-/*-----Default component end-------*/
 /*===Guide styles start===*/
 .quid-section form .form-control + .form-control{
 	margin-bottom: 10px;
 }
-
 /*===Guide styles end===*/
 
 /*======Custom styles start======*/
@@ -294,6 +319,7 @@ textarea.form-control{
 .inner-content{
 	display: inline-block;
 	vertical-align: middle;
+	position: relative;
 }
 .h1{
 	text-align: center;
@@ -315,15 +341,41 @@ textarea.form-control{
 	color: rgba(255, 255 ,255, 0.68);
 	font: 300 19px/1 'Open Sans', sans-serif;
 }
-.white{
-	background-color: white;
-	margin-top: 370px;
+.inner-scroll-bottom{
+	background-color: #fff;
+	position: absolute;
+	bottom: 50px;
+	left: 950px;
 }
 .inner .rhomb-icon .fa{
 	position:relative;
 	top: 4px;
 	left: 3px;
 	font-size: 20px;
+}
+@media (max-width: 991px){
+	.inner .h1{
+		letter-spacing: .7em;
+		text-indent: .7em;
+		margin-bottom: 50px;
+	}
+	.inner-scroll-bottom{
+		margin-top: 70px;
+	}
+}
+@media (max-width: 767px) {
+	.inner{
+		height: auto;
+		padding: 150px 0;
+	}
+}
+@media(max-width: 320px){
+	.inner .h1{
+		letter-spacing: .5em;
+		text-indent: .5em;
+		margin-bottom: 0;
+		font-size: 20px;
+	}
 }
 /*-----inner end----*/
 
@@ -418,18 +470,42 @@ textarea.form-control{
 	text-transform: uppercase;
 	font-size: 11px;
 }
+@media(max-width: 991px){
+	.team-item-info .team-item-role{
+		font-size: 9px;
+	}
+}
+@media(max-width: 320px){
+	.default-text{
+		margin-top: 15px;
+	}
+	.team-wrapper{
+		margin-top: 30px;
+	}
+	.team-item{
+		margin-bottom: 40px
+	}
+}
 /*---About studio end---*/
 
 /*---Why choose---*/
 .benefits{
 	margin-top: 90px;
 }
-
 .benefits .title{
 	font-weight: 400;
 	font-size: 14px;
 	letter-spacing: .4em;
 	margin-bottom: 40px;
+}
+@media (max-width: 991px) {
+	.benefits {
+		margin-top: 20px;
+	}
+	.benefits .icon{
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
 }
 /*---Why choose end---*/
 
@@ -521,7 +597,6 @@ textarea.form-control{
 	color: #999;
 	line-height: 1.63;
 }
-
 .news-item-info > a{
 	margin-bottom: 17px;
 	display: block;
@@ -541,21 +616,37 @@ textarea.form-control{
 .news-item-info > p{
 	margin-bottom: 30px;
 }
-.btn-news{
+.latest-news .btn-xs{
 	font-size: 11px;
 	letter-spacing: .2em;
-	line-height: 1.72;
-
+	/*line-height: 1.72;*/
 }
 .news-item-img{
 	filter: grayscale(100%);
 }
+.news-item-img img{
+	width: 100%;
+}
 .news-item-img:hover{
 	filter:none;
+}
+@media(max-width: 991px){
+	.latest-news .news-item .news-item-img img{
+		width: 100%;
+	}
+	.latest-news .news-item{
+		margin-bottom: 30px;
+		padding-bottom: 30px;
+		border-bottom: 2px solid black;
+	}
+	
 }
 /*---Latest news end---*/
 
 /*---Services---*/
+#tabs .tabs-nav{
+	margin-bottom: 80px;
+}
 #tabs .tabs-nav li{
 	float: left;
 	width: 20%;
@@ -567,20 +658,44 @@ textarea.form-control{
 .tabs-nav .icon{
 	color: #888;
 }
-.tabs-nav  .ui-stahte-active span{
+.tabs-nav  .ui-state-active span{
 	color: #111;
 }
 .services .tabs-nav{
 	overflow: hidden;
 }
 .tabs-name{
-	margin-bottom: 80px;
 	font: 400 14px 'Dosis', sans-serif ;
 	letter-spacing: .4em;
 	text-transform: uppercase;
 }
+
+@media(max-width: 991px){
+	.tabs-name{
+		font-size: 11px;
+	}
+	#tabs .tabs-nav{
+		margin-bottom: 30px;
+	}
+}
+@media(max-width: 320px){
+	#tabs .tabs-nav li{
+		width: 33.3332%;
+		margin-top: 20px;
+	}
+	.tabs-name{
+		letter-spacing: .2em;
+		font-size: 8px;
+	}
+	#tabs blockquote{
+		font-size: 20px;
+	}
+}
 /*---Services end---*/
 /*---Portfolio----*/
+.tabs-wrapper{
+	margin-top: 80px;
+}
 #tabs-portfolio {
 	text-align: center;
 }
@@ -606,7 +721,7 @@ textarea.form-control{
 .portfolio-item img:hover{
 	filter:none;
 }
-#all-works,
+#all-works, #brand, #photo, #design, 
 .tab-second {
 	overflow: hidden;
 }
@@ -619,30 +734,48 @@ textarea.form-control{
 .tab-second{
 	margin-bottom: 50px;
 }
-
 .tab-second .ui-state-active a{
 	color: #111;
 }
 .portfolio p{
 	max-width: 800px;
 	margin: 0 auto;
-	margin-bottom: 80px;
+	
 }
 .portfolio{
 	padding-bottom: 7px;
 }
-
-
-
+@media(max-width: 991px){
+	#tabs-portfolio .portfolio-item{
+		width: 50%;
+	}
+}
+@media(max-width: 576px){
+	.tab-second li{
+		margin-left: 25px;
+	}
+	.portfolio p{
+		margin-bottom: 40px;
+	}
+}
+@media(max-width: 320px){
+	#tabs-portfolio .tab-second li{
+		margin-top: 20px;
+	}
+	.portfolio p{
+		margin-bottom: 20px;
+	}
+	#tabs-portfolio .portfolio-item{
+		width: 100%;
+	}
+}
 /*---Portfolio end----*/
 
 /*---carousel---*/
 .slide-content .icon{
-	margin-top: 13px;
 	margin-bottom: 26px;
 	color: #fff;
 } 
-
 .slide-content p{
 	margin-top: 42px;
 	margin-bottom: 23px;
@@ -660,6 +793,32 @@ textarea.form-control{
 	letter-spacing: .2em;
 	text-transform: uppercase;
 }
+@media(max-width: 576px){
+	.reviews-carousel{
+		padding: 65px 0;
+	}
+	.slide-content{
+		max-width: 560px;
+		margin: auto;/*Появляется непонятный для меня margin с права ,я его поэтому ставлю auto? что бы блок был по середине*/
+	}
+}
+@media(max-width: 320px){
+	.slide-content{
+		max-width: 310px;
+	}
+	.slick-arrow.slick-prev .carousel-button .fa{
+		bottom: 7px;
+		right: 10px;
+	}
+	.slick-arrow .carousel-button{
+		width: 53px;
+		height: 53px;
+	}
+	.slick-arrow.slick-next .carousel-button .fa {
+		top: 10px;
+		left: 10px;
+	}
+}
 /*--- / carousel---*/
 
 /*---Lets talk-----*/
@@ -673,6 +832,22 @@ textarea.form-control{
 .lets-talk .lets-talk-img{
 	margin-top: -32px;
 }
+@media(max-width: 991px){
+	.lets-talk-content{
+		text-align: center;
+		padding: 70px 0;
+	}
+}
+@media(max-width: 320px){
+	.title.section-title{
+		font-size: 15px;
+		letter-spacing: .3em;
+	}
+	.latest-news .all-news{
+		float: left;
+		margin-top: 10px;
+	}
+}
 /*---Lets talk end-----*/
 /*---Subsride----*/
 .subscribe form .form-control{
@@ -681,7 +856,11 @@ textarea.form-control{
 .subscribe .form-info{
 	margin-top: 17px;
 }
-
+@media(max-width: 320px){
+	.subscribe .btn.btn-black{
+		margin-top: 10px;
+	}
+}
 /*---Subsride end----*/
 
 /*---contacts start---*/
@@ -693,7 +872,6 @@ textarea.form-control{
 	vertical-align: middle;
 	margin-left: 15px;
 }
-
 .contact-item .contact-item-content span{
 	display: block;
 }
@@ -715,7 +893,6 @@ textarea.form-control{
 .contact-form {
 	margin: 0 -5px;
 	overflow: hidden;
-
 }
 .contact-form .form-control + .form-control {
 	margin-top: 10px;
@@ -729,9 +906,36 @@ textarea.form-control{
 }
 .form-info .fa{
 	margin-right: 5px;
-
+}
+@media(max-width: 576px){
+	.contact-item{
+		margin: 10px;
+	}
+	.contact-items-wrapper,
+	.title.section-title{
+		margin-bottom: 20px;
+	}
+}
+@media(max-width: 320px){
+	.contact-form .form-col{
+		width: 100%;
+	}
+	textarea.form-control{
+		margin-top: 10px;
+	}
+	.contacts button{
+		margin: auto;
+		width: 100%;
+	}
+	.contacts .form-info{
+		margin: auto;
+		width: 100%;
+		text-align: center;
+	}
 }
 /*---contacts  end---*/
+
+/*---map start---*/
 #map{
 	height: 410px;
 }
@@ -754,55 +958,66 @@ textarea.form-control{
 }
 .map-icon{
 	padding: 163px 0;
-
 }
 .open span{
 	font-size: 16px;
 	opacity: .75;
 	letter-spacing: .3em;
 }
-
 .map-icon .open{
 	margin-top: 25px;
-
 }
 .map-icon .rhomb-icon>.fa{
 	color: black;
-
 }
-/*---footer---*/
-.up{
-	margin-top: 60px;
+/*---map end---*/
 
+/*---footer---*/
+.footer{
+	background-color: #f8f8f8;
 }
 .logo-up{
+	margin-top: 60px
 	margin-bottom: 25px;
 }
-.bottom{
+.footer ul{
+	margin-top: 25px;
+}
+.rhythm{
 	margin-top: 110px;
-	margin-bottom: 60px;
+	/*margin-bottom: 60px;*/
 }
 .transporent-icon + .transporent-icon{
 	margin-left: 20px;
 }
-.bottom span{
+.footer span{
 	display: block;
 }
-.bottom i{
+.footer .rhythm i {
 	margin-right: 16px;
 	color: #b5b5b5;
 }
-.bottom .rhythm{
+.footer .rhythm{
 	text-transform: uppercase;
 	font-size: 12px;
 	line-height: 2;
 	letter-spacing: .5em;
 	color: #111;
-	margin-bottom: 15px;
 }
-.bottom .made{
+.footer .made{
 	font-size: 11px;
 	line-height:2.18; 
+}
+@media(max-width: 767px){
+	.footer .rhythm{
+		margin-top: 50px;
+	}
+	.footer .made{
+		margin-bottom: 10px;
+	}
+	.logo-up{
+		margin-top: 0;
+	}	
 }
 /*---/footer---*/
 /*====Custom styles end=====*/
